--- a/.github/workflows/data-collection.yml
+++ b/.github/workflows/data-collection.yml
@@ -2,16 +2,11 @@ name: Data Collection
 
 on:
   schedule:
-    # 축제 데이터: 매월 1일, 16일 00:00 UTC (한국 09:00)
-    - cron: '0 0 1,16 * *'
-    # 날씨 데이터: 매일 06:00 UTC (한국 15:00)
-    - cron: '0 6 * * *'
+    - cron: '0 0 1,16 * *'  # 매월 1일, 16일 00:00 UTC (한국 09:00)
   workflow_dispatch:  # 수동 실행
 
 jobs:
-  collect-festivals:
-    # 축제/맛집 수집: 매월 1일, 16일 또는 수동 실행
-    if: github.event.schedule == '0 0 1,16 * *' || github.event_name == 'workflow_dispatch'
+  collect-all-data:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -27,41 +22,23 @@ jobs:
           cd py_scripts
           pip install -r requirements.txt
 
-      - name: Run festival & place collection
+      - name: Run data collection
         env:
           SEOUL_API_KEY: ${{ secrets.SEOUL_API_KEY }}
           NAVER_CLIENT_ID: ${{ secrets.NAVER_CLIENT_ID }}
           NAVER_CLIENT_SECRET: ${{ secrets.NAVER_CLIENT_SECRET }}
+          KMA_API_KEY: ${{ secrets.KMA_API_KEY }}
           GOOGLE_PLACES_API_KEY: ${{ secrets.GOOGLE_PLACES_API_KEY }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
         run: |
           cd py_scripts
-          python -c "from modules import festival, place; festival.fetch_and_save(); place.fetch_and_save()"
+          python main.py
 
-  collect-weather:
-    # 날씨 수집: 매일 또는 수동 실행
-    if: github.event.schedule == '0 6 * * *' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
+      - name: Commit and push data
         run: |
-          cd py_scripts
-          pip install -r requirements.txt
-
-      - name: Run weather collection
-        env:
-          KMA_API_KEY: ${{ secrets.KMA_API_KEY }}
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
-        run: |
-          cd py_scripts
-          python -c "from modules import weather; weather.fetch_and_save()"
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add public/data/
+          git diff --staged --quiet || git commit -m "Update data files"
+          git push
