--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.94.0",
     "@tailwindcss/vite": "^4.1.18",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.13.4",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "geolib": "^3.3.4",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "motion": "^12.27.1",
     "react": "^19.2.0",
@@ -26,6 +29,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/navermaps": "^3.9.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
