--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.94.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
